--- a/margin-and-padding/02-margin-and-padding-2/style.css
+++ b/margin-and-padding/02-margin-and-padding-2/style.css
@@ -13,13 +13,15 @@ body {
 .title {
   background: #e3f4ff;
   margin-top: 0px;
+  margin-bottom: 8px;
   font-size: 16px;
   padding: 8px;
 }
 
 .content {
   background: #e3f4ff;
-  margin: 16px 8px;
+  padding: 16px 8px;
+  margin-bottom: 8px;
 }
 
 .button-container {
@@ -30,7 +32,7 @@ body {
 
 button {
   display: block;
-  margin: 0px auto;
+  margin: 0 auto;
   background: white;
   border: 1px solid #eee;
   padding: 8px 24px; 
