--- a/flex/04-flex-information/style.css
+++ b/flex/04-flex-information/style.css
@@ -1,10 +1,40 @@
+html,
 body {
   font-family: 'Courier New', Courier, monospace;
+  height: 100%;
+}
+
+.container {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 32px;
+}
+
+.content-container {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  gap: 52px;
+}
+
+.content {
+  display: flex;
+  flex-direction: column;
+  width: 200px;
+  flex: auto;
+}
+
+.text {
+  text-align: center;
 }
 
 img {
   width: 100px;
   height: 100px;
+  align-self: center;
 }
 
 .title {
