--- a/flex/06-flex-layout/style.css
+++ b/flex/06-flex-layout/style.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
 
+html,
 body {
   height: 100vh;
   margin: 0;
@@ -24,4 +25,79 @@ input {
   padding: 8px 24px;
   width: 400px;
   margin-bottom: 16px;
+}
+
+ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+a {
+  text-decoration: none;
+  color: #666;
+}
+
+.container {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.header {
+  display: flex;
+  flex: 0;
+  justify-content: space-between;
+  padding: 1rem;
+}
+
+.header .left-links {
+  margin-left: 0.5rem;
+  display: flex;
+  align-items: flex-start;
+  gap: 1rem;
+}
+
+.header .right-links {
+  margin-right: 0.5rem;
+  display: flex;
+  align-items: flex-start;
+  gap: 1rem;
+}
+
+.content {
+  display: flex;
+  flex: 10;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.footer {
+  background-color: #eee;
+  display: flex;
+  flex: 0;
+  justify-content: space-between;
+  padding: 1rem;
+}
+
+.footer .left-links {
+  margin-left: 0.5rem;
+  display: flex;
+  align-items: flex-end;
+  gap: 1rem;
+}
+
+.footer .right-links {
+  margin-right: 0.5rem;
+  display: flex;
+  align-items: flex-end;
+  gap: 1rem;
+}
+
+.buttons button {
+  padding: 0.5rem;
+  font-weight: 600;
+  width: 10em;
 }
