--- a/flex/07-flex-layout-2/style.css
+++ b/flex/07-flex-layout-2/style.css
@@ -1,29 +1,99 @@
+html,
 body {
+  height: 100vh;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   margin: 0;
   min-height: 100vh;
 }
 
+ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+.container {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: stretch;
+  justify-content: center;
+}
+
 .header {
-  height: 72px;
+  flex: 1 1 auto;
+  min-height: 72px;
   background: darkmagenta;
   color: white;
+  font-size: 32px;
+  font-weight: 900;
+
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  padding-left: 1rem;
+
 }
 
 .footer {
-  height: 72px;
+  flex: 1 1 auto;
+  min-height: 72px;
   background: #eee;
   color: darkmagenta;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.content {
+  flex: 10 0 auto;
+
+  display: flex;
 }
 
 .sidebar {
+  flex: 0 0 auto;
   width: 300px;
   background: royalblue;
   box-sizing: border-box;
 }
 
+.sidebar ul {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  gap: 1rem;
+  margin-top: 1rem;
+  margin-left: 1rem;
+  height: 400px;
+}
+
+.sidebar a {
+  color: #fff;
+  text-decoration: none;
+  font-size: 24px;
+}
+
+.cards {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  align-items: center;
+  gap: 2rem;
+}
+
 .card {
+  flex: 0 0 auto;
   border: 1px solid #eee;
   box-shadow: 2px 4px 16px rgba(0,0,0,.06);
   border-radius: 4px;
+  padding: 32px;
+  height: 300px;
+  width: 300px;
+  min-width: 300px;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
